<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="add">add</string>
    <string name="add_new_note">Add new note:</string>
    <string name="add_name_text">name</string>
    <string name="description_add_note_text">description</string>
    <string name="order_list">order</string>
    <string name="about">about</string>
    <string name="about_app_text">About application:</string>
    <string name="developer_text">developer - Ivan Popov</string>
    <string name="version_text">version - 1.0</string>
    <string name="year_text">year - 2021</string>
    <string name="save">save</string>
    <string name="search">search</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="exclamation">Delete a note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>